# dropzone47

./: .dockerignore  .env.example  .gitignore  AGENTS.md  CLAUDE.md  Dockerfile  Justfile  README.md  docker-compose.yml  go.mod  go.sum  main.go  main.py  pyproject.toml  requirements.txt
.github/workflows/: ci.yml  release.yml
cmd/: config.go  doctor.go  get.go  root.go  serve.go  version.go
dropzone47/: __init__.py  bot.py  config.py  download.py  session.py  utils.py
internal/bot/: bot.go
internal/config/: config.go  config_test.go
internal/download/: auto.go  download.go  download_test.go  lux.go  ytdlp.go
internal/i18n/: i18n.go  i18n_test.go
internal/ratelimit/: ratelimit.go  ratelimit_test.go
internal/session/: session.go  session_test.go
internal/util/: util.go  util_test.go
legacy/: Dockerfile  main.py  pyproject.toml  test.sh
legacy/dropzone47/: bot.py  download.py  i18n.py  ratelimit.py  session.py  utils.py
legacy/tests/: test_download.py  test_ratelimit.py  test_utils.py
tests/: test_i18n.py  test_session.py  test_utils.py
